# business_claw

./: .gitignore  README.md  license.txt  setup.py
business_claw/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
business_claw/bc_agents/: __init__.py  api.py  setup.py
business_claw/bc_agents/doctype/: __init__.py
business_claw/bc_agents/doctype/ai_agent/: ai_agent.json  ai_agent.py  ai_agent_list.js
business_claw/bc_agents/doctype/ai_agent_capability/: ai_agent_capability.json
business_claw/bc_agents/doctype/ai_execution_log/: ai_execution_log.json  ai_execution_log.py
business_claw/bc_agents/doctype/ai_task/: ai_task.json  ai_task.py  ai_task_approval.js  (+1 more)
business_claw/bc_agents/fixtures/: default_agents.json
business_claw/bc_agents/runner/: __init__.py  agent-runner.service  daemon.py  ecosystem.config.js  hitl_handler.py  llm_router.py  mcp_client.py  task_poller.py
business_claw/bc_audit/: __init__.py  logger.py
business_claw/bc_checklist/: __init__.py
business_claw/bc_checklist/fixtures/: checklist_template.json  property_setter.json
business_claw/bc_guardrails/: __init__.py  approval_gate.py  denylist.py  policy.py  risk_scorer.py
business_claw/bc_mcp/: __init__.py  auth.py  response.py  router.py  server.py
business_claw/bc_mcp/cloudflare/: DEPLOY.md  package.json  wrangler.toml
business_claw/bc_tools/: __init__.py  doc.py  file.py  meta.py  system.py  workflow.py
business_claw/tests/: __init__.py  test_agent_runner.py
cloudflare_python/: DEPLOY.md  pyproject.toml  wrangler.toml
cloudflare_python/src/: index.py
(+15 files in other folders)
