[project]
name = "frappemcp-python"
version = "1.0.0"
description = "FrappeMCP - Remote MCP Server for ERPNext on Cloudflare Workers (Python)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[lib]
name = "frappemcp"
src = "src"

[[bin]]
name = "frappemcp"
path = "src/index.py"

[build]
command = "pip install -e ."
